--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
               class="button search-btn search-button js-search-button"
             >
               <span class="button-icon">GO</span>
-              <!-- <svg width="32" height="32">
-                <use href="./images/search.svg"></use>
+              <!-- <svg class="search__images" width="32" height="32">
+                <use href="./images/search.svg#search__images"></use>
               </svg> -->
             </button>
           </form>
